<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_new_game"
        android:orderInCategory="100"
        android:title="@string/action_new_game" ></item>

    <item
        android:id="@+id/action_rematch"
        android:orderInCategory="110"
        android:title="@string/action_rematch" ></item>

    <item
        android:id="@+id/action_undo"
        android:orderInCategory="120"
        android:title="@string/action_undo" ></item>

    <item
        android:id="@+id/action_difficulty"
        android:orderInCategory="130"
        android:title="@string/action_difficulty">
        <!-- An empty SubMenu -->
        <menu></menu>
    </item>

    <item android:id="@+id/action_about"
        android:orderInCategory="140"
        android:title="@string/action_about"/>
    
</menu>
